# adtools-revamp

./: .env.tauri  .gitignore  .gitlab-ci.yml  .prettierignore  AGENTS.md  README.md  TESTING_GUIDE.md  architecture.md  components.json  eslint.config.mjs  index.html  install-oracle-libs.sh  install-oracle.sh  migrate-to-vit.md  package-lock.json  package.json  quick-query-migration-plan.md  script.js  styles.css  tailwind.config.js  test-device-usage.js  test-invalid-base64.txt  test-oracle-install-local.sh  test-qq.mjs  test-text-base64.txt  vite.config.js  vitest.config.js  vitest.config.mjs  vitest.setup.js  wrangler.toml
.trae/: settings.json
app/: App.js  App.jsx  index.css
docs/: grabber.py  (+41 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build_release.sh  upload_to_r2.sh
src-tauri/src/: confluence.rs  credentials.rs  jenkins.rs  lib.rs
src-tauri/src/oracle/: client.rs  commands.rs  comparison.rs  connection.rs  credentials.rs  mod.rs  models.rs  query.rs  sanitize.rs  types.rs
src-tauri/tests/: credential_tests.rs  oracle_client_tests.rs  oracle_connection_tests.rs
tauri/: Cargo.toml  Info.plist  tauri.conf.json
tauri/capabilities/: default.json
tauri/releases/2025-11-18_14-07/: stable.json
tauri/releases/2025-11-18_14-07/darwin-aarch64/: ADTools-1.0.2-mac-arm64.app.tar.gz.sig
tauri/scripts/: build_release.sh  upload_to_r2.sh
tauri/sidecar/: README.md  build.sh  build_sidecar.py  oracle_sidecar.py  requirements.txt
tauri/src/: confluence.rs  jenkins.rs  lib.rs  main.rs  oracle.rs  oracle_sidecar.rs
(+453 files in other folders)
