[package]
name = "adtools"
version = "0.1.0"
description = "AD Tools Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "adtools"

[lib]
name = "ad_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = ["devtools"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Added for Jenkins integration
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls"] }
keyring = "2"
thiserror = "1.0"
urlencoding = "2.1"
tokio = { version = "1", features = ["time"] }
chrono = "0.4"
open = "5"

[dev-dependencies]
httpmock = "0.6"
